fix unit error in text

--- a/ms/ms.Rmd
+++ b/ms/ms.Rmd
@@ -245,7 +245,7 @@ To analyze positive-growth steady state behavior, we ran the model to steady sta
 
 Similarly, increasing DIN alleviates nitrogen-limitation (Fig. 3A). Increased growth at higher DIN is predicted by the DEB model of @Muller:2009io, and has also been observed experimentally [@MullerParker:1994uo; @Tanaka:2007uv; @Tanaka:2013dj]. However, DIN elevation beyond a certain point (e.g., ~3-4 µM in these simulations) has little effect on growth as carbon becomes limiting. Although very high nutrient levels may reduce growth in nature [@Shantz:2015dz], these impacts are not likely to occur within the range of concentrations considered here (<4 µM) [@FerrierPages:2000p1950]. In addition to increasing growth, DIN also increases the symbiont to host biomass ratio (Fig. 3B), a phenomenon also observed in reef corals [@Marubini:1996p8460]. At low DIN and intermediate light, more typical of coral reef environments, symbiont to host biomass ratios are around ~0.06-0.21, which is consistent with values reported in the literature [@Muscatine:1981jy; @Edmunds:2011bv; @Hawkins:2016jj].
 
-The maximum predicted growth rates of ~0.1 d^-1^, occurring between ~10-25 mol photons m^-2^ s^-1^ light and ~4 µM DIN (Fig. 3A), are comparable to the rate of `r Tanaka_gr` d^-1^ measured by @Tanaka:2007uv in *Acropora pulchra* under similar N-enriched conditions. Under conditions more typical of reef environments (<0.5 µM DIN), predicted growth rates are ~0.01-0.03 d^-1^. Observed specific growth rates in several coral species fall near or below the lower end of this range (~0.01 d^-1^) [@Osinga:2011kq; @Osinga:2012is], though values as high as 0.025 d^-1^ have been reported in *Galaxea fascicularis* [@Schutter:2010p7758], and `r Armoza_gr` d^-1^ in *Aiptasia diaphana*, a non-calcifying symbiotic anemone [@ArmozaZvuloni:2014ju]. However, it is not surprising that observed growth rates are often lower than model predictions, since the model does not account for ecological factors that may limit growth (e.g., competition, predation, bioerosion). 
+The maximum predicted growth rates of ~0.1 d^-1^, occurring between ~10-25 mol photons m^-2^ d^-1^ light and ~4 µM DIN (Fig. 3A), are comparable to the rate of `r Tanaka_gr` d^-1^ measured by @Tanaka:2007uv in *Acropora pulchra* under similar N-enriched conditions. Under conditions more typical of reef environments (<0.5 µM DIN), predicted growth rates are ~0.01-0.03 d^-1^. Observed specific growth rates in several coral species fall near or below the lower end of this range (~0.01 d^-1^) [@Osinga:2011kq; @Osinga:2012is], though values as high as 0.025 d^-1^ have been reported in *Galaxea fascicularis* [@Schutter:2010p7758], and `r Armoza_gr` d^-1^ in *Aiptasia diaphana*, a non-calcifying symbiotic anemone [@ArmozaZvuloni:2014ju]. However, it is not surprising that observed growth rates are often lower than model predictions, since the model does not account for ecological factors that may limit growth (e.g., competition, predation, bioerosion). 
 Furthermore, while most measurements are made on skeletal growth, the model predicts biomass growth, which may not always be strongly correlated [@Anthony:2002tc].
 
 At irradiance levels above ~25 mol photons m^-2^ d^-1^, steady state growth rates decline until positive growth ceases above ~40 µmol photons m^-2^ d^-1^ (Fig. 3A). The mechanism underlying this decline is the increase in light energy beyond the capacities of photosynthesis and non-photochemical quenching: excess excitation energy generates reactive oxygen species (ROS) [@Weis:2008p944; @Roth:2014wf], which, in this model, have the phenomenological consequences of reducing the photosynthetic rate (representing photoinhibition) and increasing symbiont biomass loss (representing photodamage and/or symbiont expulsion) [see @Eynaud:2011tv]. Together, these impacts reduce the symbiont to host biomass ratio (Fig. 3B), as occurs during coral bleaching. This reduction in symbionts consequently reduces the flux of fixed carbon to the host, resulting in increasing carbon-limitation (Fig. 3B) and eventual cessation of growth (Fig. 3A). 
