--- a/ms/ms.Rmd
+++ b/ms/ms.Rmd
@@ -237,7 +237,7 @@ Simulations using the discretized scheme were performed using R code developed i
 
 In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. However, under some conditions, either of these outcomes may occur depending on initial values of symbiont and host biomass, indicating the presence of alternate stable states (Fig. 2). The mechanism that produces these alternate stable states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis: if symbiont biomass is initially very low (i.e., a "bleached" coral), very little carbon is fixed, and the system cannot escape this positive feedback and cannot grow (unless feeding is sufficiently high). However, if symbiont biomass is initially high (i.e., a "healthy" coral), then the system remains in a nitrogen-limited state with positive growth. For practical purposes, this section of the manuscript considers only positive growth steady states under constant environments; subsequently, we explore how environmental forcing may cause the system to switch between alternate stable states, which we interpret in the context of coral bleaching (see "Coral Bleaching and Recovery", below).
 
-![Alternate stable states in S:H biomass and growth across a light gradient. Alternate stable states occur between ~25-42 mol photons m^-2^ d^-1^ under these conditions (DIN=1e-7 mol N L^-1^; X=1e-7 C-mol X L^-1^), depending on whether initial S:H is high (1, closed circles), representing a healthy coral, or low (0.0001, open circles), representing a bleached coral. Arrow above point at L=25 indicates a S:H ratio beyond the axis range; this 'overshoot' phenomenon, in which initially  bleached corals may achieve high S:H ratios while remaining in a carbon-limited state is discussed in the *Coral Bleaching and Recovery* section.](../img/Fig2.png)
+![Alternate stable states in S:H biomass and growth across a light gradient. Alternate stable states occur between ~25-42 mol photons m^-2^ d^-1^ under these conditions (DIN=1e-7 mol N L^-1^; X=1e-7 C-mol X L^-1^), depending on whether initial S:H is high (1, closed circles), representing a healthy coral, or low (0.0001, open circles), representing a bleached coral. Arrow above point at L=25 indicates a S:H ratio beyond the y-axis range; this 'overshoot' phenomenon, in which initially  bleached corals may achieve high S:H ratios while remaining in a carbon-limited state is discussed in the *Coral Bleaching and Recovery* section.](../img/Fig2.png)
 
 To analyze positive-growth steady state behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 3), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 3A). Low light limits photosynthetic rates, resulting in less fixed carbon shared with the host and an associated increase in the symbiont to host biomass ratio (Fig. 3B). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, host growth becomes less carbon-limited.
 
@@ -291,7 +291,7 @@ The importance of host CCM activity establishes significant interactive roles fo
 
 Since bleaching can be understood as a transition from a nitrogen-limited state with high S:H biomass to a carbon-limited state with low S:H biomass, induced by an external stressor, recovery can be understood as a switch back to the nitrogen-limited state once the external stressor is alleviated. In natural settings, this typically occurs through seasonal declines in temperature and light. However, hysteresis associated with the system's alternate stable states indicates that the symbiosis cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2). This is because under the same external conditions, a bleached coral with low S:H biomass (relative to a healthy coral with high S:H biomass) is characterized by greater light amplification and weaker CCM activity, which enhance photooxidative stress and serve to maintain the carbon-limited state. In order for the system to recover, the stressor must be reduced enough such that photooxidative stress ceases and translocation of carbon from symbiont to host is resumed. Once this occurs, the host can energize its CCMs, which further enhances carbon fixation and accelerates the system back toward a nitrogen-limited state, indicative of recovery. The conditions under which recovery can occur -- which determine the magnitude of hysteresis (Fig. 8) -- depend on the relative abundance of nitrogen and carbon in the environment. Higher food levels, representing a non-autotrophic carbon source for the host, make it easier for the host to overcome carbon-limitation (Fig. 8A, D), thus providing a potential mechanism underlying observations that feeding aids recovery from bleaching [@Grottoli:2006p3692; @Connolly:2012ep]. Conversely, high external DIN impedes the re-establishment of nitrogen-limitation, making recovery from bleaching more difficult (i.e., narrowing - or eliminating - conditions under which recovery is possible, Fig. 8C).
 
-![Hysteresis under different nutrient and feeding regimes. Steady state S:H biomass ratios in constant environments with (A) low DIN (1e-7 M) and low food (2e-7 M), (B) low DIN (1e-7 M) and no food, (C) high DIN (2e-6 M) and low food (2e-7 M), and (D) high DIN (2e-6 M) and high food (4e-7 M). In each panel, steady states are shown starting from both high initial S:H biomass (1, i.e. healthy corals - closed circles) and low initial initial S:H biomass (0.0001, i.e. bleached corals - open circles). Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state.](../img/Fig8.png)
+![Hysteresis under different nutrient and feeding regimes. Steady state S:H biomass ratios in constant environments with (A) low DIN (1e-7 M) and low food (2e-7 M), (B) low DIN (1e-7 M) and no food, (C) high DIN (2e-6 M) and low food (2e-7 M), and (D) high DIN (2e-6 M) and high food (4e-7 M). In each panel, steady states are shown starting from both high initial S:H biomass (1, i.e. healthy corals - closed circles) and low initial initial S:H biomass (0.0001, i.e. bleached corals - open circles). Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state. Arrows above points indicate values beyond the y-axis range.](../img/Fig8.png)
 
 Dynamic simulations of recovery reveal another interesting behavior of the system: under some conditions, an 'overshoot' occurs in which S:H biomass temporarily increases beyond the ratio maintained in the 'healthy' state, before returning to stabilize at this value (Fig. 9). In fact, unusually high symbiont densities have been observed following bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model reveals the dynamics of this 'overshoot' as follows: as symbionts repopulate the host, photosynthesis becomes increasingly CO~2~-limited due to weak CCM activity of the carbon-limited host. Thus, although symbiont growth is not yet carbon-limited, a growing symbiont population has less and less excess carbon (per symbiont) to share, and is thus moving toward carbon-limitation. Meanwhile, because S:H biomass is increasing, the host receives more and more carbon per unit host biomass, and is thus moving away from carbon-limitation. If the host overcomes carbon-limitation *before* the symbiont reaches it, then the system rapidly transitions to the nitrogen-limited state and the S:H ratio stabilizes without an overshoot (Fig. 9A). However, if the symbiont becomes carbon-limited first (Fig. 9B, 9C), then carbon translocation per symbiont declines further and photosynthesis becomes more CO~2~-limited, which maintains carbon-limitation of the host. In this situation, continued growth of less and less productive symbionts drives S:H biomass to a much higher level before the host finally overcomes carbon-limitation. At this point, representing the peak of the overshoot, the transition to nitrogen-limitation finally takes place and the S:H biomass ratio declines and stabilizes as positive growth is resumed.
 
