--- a/ms/ms.tex
+++ b/ms/ms.tex
@@ -1190,7 +1190,7 @@ d\textsuperscript{-1} under these conditions (DIN=1e-7 mol N
 L\textsuperscript{-1}; X=1e-7 C-mol X L\textsuperscript{-1}), depending
 on whether initial S:H is high (1, closed circles), representing a
 healthy coral, or low (0.0001, open circles), representing a bleached
-coral. Arrow above point at L=25 indicates a S:H ratio beyond the axis
+coral. Arrow above point at L=25 indicates a S:H ratio beyond the y-axis
 range; this `overshoot' phenomenon, in which initially bleached corals
 may achieve high S:H ratios while remaining in a carbon-limited state is
 discussed in the \emph{Coral Bleaching and Recovery} section.}
@@ -1561,7 +1561,8 @@ M) and low food (2e-7 M), (B) low DIN (1e-7 M) and no food, (C) high DIN
 initial S:H biomass (1, i.e.~healthy corals - closed circles) and low
 initial initial S:H biomass (0.0001, i.e.~bleached corals - open
 circles). Points are colored according to whether the host exhibits
-positive (black) or negative (red) growth at steady state.}
+positive (black) or negative (red) growth at steady state. Arrows above
+points indicate values beyond the y-axis range.}
 \end{figure}
 
 Dynamic simulations of recovery reveal another interesting behavior of
